[workspace]
members = [
    "rpc",
    "storage-mysql",
]

exclude = []

# This prevents a Travis CI error when building for Windows.
resolver = "2"

[workspace.package]
version = "2.0.0"
authors = ["Dexterlab <support@dexterlab.com>"]
repository = "https://github.com/solana-labs/solana"
homepage = "https://dexterlab.com/"
license = "AGPL-3"
edition = "2021"

[workspace.dependencies]
async-trait = "0.1.68"
backoff = "0.4.0"
base64 = "0.21.2"
bincode = "1.3.3"
bs58 = "0.4.0"
bytes = "1.2"
bzip2 = "0.4.4"
chrono = "0.4.38"
clap = "2.33.1"
console = "0.15.7"
crossbeam-channel = "0.5.8"
enum-iterator = "1.4.1"
fd-lock = "3.0.12"
flate2 = "1.0.26"
futures = "0.3.28"
goauth = "0.13.1"
http = "0.2.9"
hyper = "0.14.26"
hyper-proxy = "0.9.1"
indicatif = "0.17.4"
Inflector = "0.11.4"
jemallocator = { package = "tikv-jemallocator", version = "0.4.1", features = ["unprefixed_malloc_on_supported_platforms"] }
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-http-server = "18.0.0"
lazy_static = "1.4.0"
libc = "0.2.144"
log = "0.4.17"
matches = "0.1.10"
num_cpus = "1.15.0"
num_enum = "0.6.1"
openssl = "0.10"
prost = "0.11.9"
prost-types = "0.11.9"
protobuf-src = "1.1.0"
rayon = "1.7.0"
rustc_version = "0.4"
serde = "1.0.163"
serde_bytes = "0.11.9"
serde_derive = "1.0.103"
serde_json = "1.0.96"
serde_with = { version = "2.3.3", default-features = false }
signal-hook = "0.3.15"
smpl_jwt = "0.7.1"
time = "0.3.36"
md5 = "0.7"
dotenv = "0.15.0"
env_logger = "0.9.0"
envy = "0.4.2"
mysql = "23.0.0"
solana-clap-utils = "=2.0.5"
solana-logger = "=2.0.5"
solana-metrics = "=2.0.5"
solana-net-utils = "=2.0.5"
solana-perf = "=2.0.5"
solana-rayon-threadlimit = "=2.0.5"
block-meta-rpc = { path = "rpc", version = "=2.0.0" }
solana-rpc-client-api = "=2.0.5"
solana-sdk = "=2.0.5"
solana-storage-mysql = { path = "storage-mysql", version = "=2.0.0" }
solana-version = "=2.0.5"
spl-memo = "=3.0.1"
symlink = "0.1.0"
sys-info = "0.9.1"
sysctl = "0.4.6"
thiserror = "1.0.40"
tokio = "~1.42.0"
tokio-serde = "0.8"
tokio-util = "0.6"
tonic = "0.8.3"
tonic-build = "0.8.4"
zstd = "0.11.2"

