[package]
name = "block-meta-rpc"
description = "Block Meta RPC"
documentation = "https://docs.rs/solana-rpc"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
crossbeam-channel = { workspace = true }
jsonrpc-core = { workspace = true }
jsonrpc-core-client = { workspace = true }
jsonrpc-derive = { workspace = true }
jsonrpc-http-server = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
solana-perf = { workspace = true }
solana-rpc-client-api = { workspace = true }
solana-sdk = { workspace = true }
solana-storage-mysql = { workspace = true }
solana-version = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true, features = ["codec", "compat"] }

clap = { workspace = true }
console = { workspace = true }
dotenv = { workspace = true }
env_logger = { workspace = true }
envy = { workspace = true }
indicatif = { workspace = true }
num_cpus = { workspace = true }
solana-clap-utils = { workspace = true }
solana-logger = { workspace = true }
solana-net-utils = { workspace = true }
symlink = { workspace = true }

num_enum = { workspace = true }
rayon = { workspace = true }
solana-metrics = { workspace = true }
solana-rayon-threadlimit = { workspace = true }

[dev-dependencies]
matches = { workspace = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { workspace = true }

[target."cfg(unix)".dependencies]
libc = { workspace = true }
signal-hook = { workspace = true }
sysctl = { workspace = true }

[build-dependencies]
rustc_version = { workspace = true }

[lib]
crate-type = ["lib"]
name = "block_meta_rpc"

[[bin]]
name = "block-meta-rpc"
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
